--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,5 @@
 ---
 output: github_document
-author: "Erik Forsberg"
 ---
 
 ```{r, include = FALSE}
@@ -117,28 +116,70 @@ d <- data.frame(mirt::coef(mod1,
                            simplify=TRUE)$'items'[,1:8])
 ```
 
+In `D3mirt` modeling, the user has the option of including constructs in the estimation by creating one or more nested lists that indicate what items belong to what construct. The construct vector arrows can contribute to the analysis by (a) visualizing the average direction for a subset set of items, and (b) showing how combinations of items interrelate on group-level in the model, i.e., as a type of dimensionality analysis. Note, the length of the construct vector arrows is arbitrary.
+
 The `D3mirt()` function call is straightforward. The output, however, is lengthy so it is recommended to use the summary function when inspecting the results.
 
 ```{r}
-# Call D3mirt() with data frame d
-g <- D3mirt(d)
-summary(g) # Show summary of results
+# Call to D3mirt(), including optional nested lists for three constructs
+# Item W7Q16 is not included in any construct because of model violations
+# The model violations for the item can be seen when plotting the model
+c <- list(list (1,2,3,4), 
+          list(5,7,8,9,10), 
+          list(11,12,13,14,15,15,16,17,18,19,20))
+g <- D3mirt(d, c)
+summary(g)
 ```
 
 The function then returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$ parameters from the GRM, as well as $MDISC$, $MDIFF$, direction cosines, and degrees for vector angles, construct lists, and vector coordinates assessed by `D3mirt()`.
 
 # The `plotD3mirt` Function
 
-The `plotD3mirt` function is based on the `rgl` package (Adler & Murdoch, 2023) for visualization with OpenGL. Graphing in default mode by calling `plotd3mirt` will return an RGL device that will appear in an external window as a three-dimensional object that can be rotated. In this illustration, however, all RGL devices are shown inline interactive objects. The `view` argument is used in the function call to `plotD3mirt` below but this was only done for optimizing the size of the RGL device (default `view = c(15, 20, 7)`) when creating this R Markdown document.
+The `plotD3mirt` function is based on the `rgl` package (Adler & Murdoch, 2023) for visualization with OpenGL. Graphing in default mode by calling `plotd3mirt` will return an RGL device that will appear in an external window as a three-dimensional object that can be rotated. In this illustration, however, all RGL devices are shown inline as interactive objects.
 
-```{r, testg1, webgl = TRUE, fig.width = 7, fig.height = 7}
-# Plot RGL device
-plotD3mirt(g, view = c(15, 20, 0.6))
+```{r, testg1, webgl = TRUE, fig.width = 7, fig.height = 7, eval = FALSE}
+# Plot RGL device with constructs visible and named
+plotD3mirt(g, 
+           constructs = TRUE, 
+           construct.lab = c("Fairness", "Conformity", "Compassion"))
 ```
 
-The graphical device indicates the presence of foremost two latent dimensions, one aligned with the x-axis and one approaching the y-axis.
-The two dimensions, however, have some within-multidimensional tendencies since they are not completely orthogonal.
-This tendency, however, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14 since they are located at around the $45°$ angle or higher between the x and z-axis.
+```{=html}
+<img
+  src="/Users/roadcastermusic/R Projects/anes08_09offwavest.html"
+  alt="The anes08_09offwaves data set"
+  title="The anes08_09offwaves data set"
+  style="display: inline-block; margin: 0 auto; max-width: 300px">
+```
+An example of how the output can be described could be as follows.
+
+> Figure $X$ indicates the presence of foremost two latent dimensions, one aligned with the x-axis and one approaching the y-axis. The two dimensions, however, have some within-multidimensional tendencies since they are not completely orthogonal. This tendency, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around the $45°$ angle or higher between the x and z-axis. Moreover, the angles of the construct vectors inform us of how these groups of items are associated. In this example, we find Compassion ($x° = 3.91, y° = 86.49, z° = 88.29$) and Conformity ($x° = 61.84, y° = 28.19, z° = 91.19$) with some within-multidimensional tendencies. However, they are both more or less orthogonal to the z-axis. Next, we find Fairness ($x° = 50.13, y° = 78.31, z° = 42.25$) with clear within-multidimensional tendencies with respect to the x and z-axis. Thus, Fairness, in this model, does not seem to be an independent construct.
+
+In this model, item W7Q16 had the most measurement problems of all items in the data. More specifically, the short vector arrows indicate high amounts of model violations. Moreover, the location of the item in the model also indicates that the item is within-multidimensional and that it does not seem to belong to any construct explicitly.
+
+The `plotD3mirt` allows us to plot the item alone using argument `items` and entering the number indicating where the item appears in the data set (see `?anes08_09offwaves`).
+
+```{r, testg4, webgl=TRUE, fig.width = 7, fig.height = 7}
+# Item W7Q16 has location 6 in the data set (gender and age excluded)
+# The item is plotted together with construct to aid the visual interpretation
+plotD3mirt(g, 
+           constructs = TRUE, 
+           items = 6, 
+           construct.lab = c("Fairness", "Conformity", "Compassion"), 
+           view = c(15, 20, 0.6))
+```
+
+```{=html}
+<img
+  src="/Users/roadcastermusic/R Projects/item.html"
+  alt="Item W7Q16"
+  title="Item W7Q16"
+  style="display: inline-block; margin: 0 auto; max-width: 300px">
+```
+
+An example of how the output can be described could be as follows.
+
+> Figure $X$ shows that item W7Q16 is located at $x° = 35.89, \, y° = 57.47, \, z° = 76.49$ which indicates that it is within-multidimensional with respect to the x and y-axis and can also be seen to be oriented between the constructs Compassion and Conformity. The discrimination score ($MDISC = .7699, \, MDIFF_{range} = [3.72, -1.81]$) is the lowest of all discrimination scores for the items in the model. This implies that the item in question does not seem to fit the three-dimensional GRM used in this particular analysis. We should also note that item W7Q15 ($x° = 60.47, \, y° = 31.52, \, z° = 100.02, \, MDISC = .9232,\, MDIFF_{range} = [4.32, -.97]$) has the second lowest discrimination score. However, the latter item do seem to belong to the Conformity construct when comparing angle location in the model.
 
 # `D3mirt` Profile Analysis
 
@@ -153,7 +194,7 @@ f <- mirt::fscores(mod1,
                    full.scores = TRUE, 
                    full.scores.SE = F, QMC = T)
 
-# Attach f to gender variable (column 2 from anes08_09offwaves data set; "W3XGENDER")
+# Attach f to gender variable (column 2 from the "anes08_09offwaves" data set; "W3XGENDER")
 # Use cbind with fscores() output first
 data("anes08_09offwaves")
 x <- anes08_09offwaves
@@ -162,7 +203,7 @@ z <- data.frame(cbind(f, x[,2]))
 
 The `plotD3mirt`function uses `as.factor()` to count the number of factor levels in the data imputed in the `levels` argument. This means that raw data can be used but the number of colors in the color vectors argument (`sphere.col`) may need to be adapted. In the example below, the criteria variable for gender only hold two factor levels. Therefore only two colors in the color vector are needed. The three axes have also been named in the function call.
 
-```{r, testg2, webgl=TRUE, fig.width = 7, fig.height = 7}
+```{r, testg2, webgl=TRUE, fig.width = 7, fig.height = 7, eval = FALSE}
 # Plot profiles with item vector arrows hidden with hide = TRUE
 # Score levels: 1 = Blue ("male") and 2 = Red ("female")
 plotD3mirt(g, hide = TRUE, 
@@ -171,12 +212,20 @@ plotD3mirt(g, hide = TRUE,
            sphere.col = c("blue", "red"), 
            x.lab = "Compassion", 
            y.lab="Conformity", 
-           z.lab="Fairness", 
-           view = c(15, 20, 0.6))
+           z.lab="Fairness")
 ```
 
-In the graphical output, it can be observed a simple profile on gender in which more women tend to have higher levels of trait on compassion.
-There seems not to be any observable gender difference related to Conformity or Fairness.
+```{=html}
+<img
+  src="/Users/roadcastermusic/R Projects/profile.html"
+  alt="Profile Ananlysis of Gender Variable"
+  title="Profile Ananlysis of Gender Variable"
+  style="display: inline-block; margin: 0 auto; max-width: 300px">
+```
+
+An example of how the output can be described could be as follows.
+
+> "In the graphical output, it can be observed a simple profile on gender in which more women tend to have higher levels of trait on compassion. There seems not to be any observable gender difference related to Conformity or Fairness."
 
 # Exporting The RGL Device
 
@@ -198,9 +247,10 @@ rgl::rgl.snapshot3d('RGLdevice.png',
                     fmt = 'png')
 ```
 
-# Getting help
+# Getting Help and Reporting Bugs
 
-If you encounter a bug, please file an issue with a minimal reproducible example on GitHub (https://github.com/ForsbergPyschometrics/D3mirt). For questions please contact me on Github or via email (forsbergpsychometrics@gmail.com).
+If you encounter a bug, please file an issue with a minimal reproducible example on GitHub (<https://github.com/ForsbergPyschometrics/D3mirt>). For questions please contact me on Github or via email ([forsbergpsychometrics\@gmail.com](mailto:forsbergpsychometrics@gmail.com){.email}).
+
 # References
 
 Adler, D., & Murdoch, D. (2023). *Rgl: 3d Visualization Using OpenGL* [Computer software]. <https://dmurdoch.github.io/rgl/index.html>
